force-app/main/default/objects/DocumentRelationAlyante__c/DocumentRelationAlyante__c.object-meta.xml
<CustomObject>
    <label>Document Relation Alyante</label>
    <nameField>
        <displayFormat>Doc-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Relations Alyante</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>