force-app/main/default/objects/DocumentRelationAlyante__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Child</label>
    <referenceTo>DocumentAlyante__c</referenceTo>
    <relationshipLabel>Document Relations Alyante (Child)</relationshipLabel>
    <relationshipName>DocumentRelationsAlyanteChild</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>