force-app/main/default/objects/DocumentRelationAlyante__c/fields/ChildExtIdAlyante__c.field-meta.xml
<CustomField>
    <fullName>ChildExtIdAlyante__c</fullName>
    <formula>Child__r.ExtIdAlyante__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child ExtIdAlyante</label>
    <type>Text</type>
</CustomField>