force-app/main/default/objects/DocumentRelationAlyante__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <referenceTo>DocumentAlyante__c</referenceTo>
    <relationshipLabel>Document Relations Alyante</relationshipLabel>
    <relationshipName>DocumentRelationsAlyanteParent</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>