force-app/main/default/objects/DocumentRelationAlyante__c/fields/ParentExtIdAlyante__c.field-meta.xml
<CustomField>
    <fullName>ParentExtIdAlyante__c</fullName>
    <formula>Parent__r.ExtIdAlyante__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent ExtIdAlyante</label>
    <type>Text</type>
</CustomField>